# based-uno

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_MODERNIZATION.md  README.md  app.py  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  script.js  style.css
.github/workflows/: ci.yml
frontend/: README.md
uno_game/: __init__.py
uno_game/src/: __init__.py  actions.py  card.py  deck.py  game.py  player.py  shop.py  spells.py
uno_game/tests/: __init__.py  test_card.py
